<resources>
    <string name="app_short_description">Learn english and relax in the same time! 📚</string>
    <string name="notification_update_title">A new update available!</string>
    <string name="summary_notification_update">A new version of the app is available. Click to update!</string>
    <string name="notification_last_time_used_title">It\'s been a while!</string>
    <string name="summary_notification_last_time_used">Let\'s learn something! We are happy you are back!</string>
    <string name="welcome">Welcome</string>
    <string name="browse_terms_of_service_and_privacy_policy">Browse the <i><u>Terms of Service</u></i> and <i><u>Privacy Policy</u></i></string>
    <string name="summary_browse_terms_of_service_and_privacy_policy">Read and agree to our Terms of Service and Privacy Policy to continue.</string>
    <string name="agree">Agree</string>
    <string name="no_carts_available">No carts available</string>
    <string name="add_new_cart">Add new cart</string>
    <string name="cart_name">Cart name</string>
    <string name="shopping_cart">Shopping cart</string>
    <string name="summary_cart_dialog">We\'re committed to creating a personalized shopping experience for everyone. To make it easier for you to keep track of your selections and enhance your shopping journey, consider giving your cart a name before adding items.</string>
    <string name="created_on">Created on %1$s</string>
    <string name="delete_cart_title">Delete Cart</string>
    <string name="delete_cart_message">Are you sure you want to delete this cart?</string>
    <string name="delete_cart_warning">Deleting this cart will permanently remove all items from \"%s\" and cannot be undone.</string>
    <string name="snackbar_cart_deleted_success">Cart deleted successfully!</string>
    <string name="snackbar_cart_deleted_error">Error deleting cart. Please try again.</string>
    <string name="close">Close?</string>
    <string name="summary_close">Are you sure you want to exit?</string>
    <string name="snack_network_error">Network error occurred while checking for updates</string>
    <string name="snack_general_error">An error occurred while checking for updates</string>
    <string name="your_shopping_cart_is_empty">Your shopping cart is empty</string>
    <string name="item_name">Item name</string>
    <string name="enter_item_name">Enter item name</string>
    <string name="item_price">Item price</string>
    <string name="enter_item_price">Enter item price</string>
    <string name="quantity">Quantity</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="dialog_info_cart_item">To ensure a seamless checkout experience, please provide details about the items you\'re adding to your cart</string>
    <string name="total">Total</string>
    <string name="delete_cart_item_title">Delete Cart Item</string>
    <string name="delete_cart_item_message">Are you sure you want to delete this item?</string>
    <string name="delete_cart_item_warning">You are about to delete "%s" from your cart.</string>
    <string name="settings">Settings</string>
    <string name="display">Display</string>
    <string name="summary_preference_settings_display">Personalize your app\'s look and feel</string>
    <string name="appearance">Appearance</string>
    <string name="dark_theme">Dark theme</string>
    <string name="will_turn_on_automatically_by_system">Will turn on automatically by the system</string>
    <string name="will_never_turn_on_automatically">Will never turn on automatically</string>
    <string name="amoled_mode">AMOLED mode</string>
    <string name="follow_system">Follow System Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="summary_dark_theme">Dark theme uses a deep background to help keep your battery alive longer</string>
    <string name="dynamic_colors">Dynamic colors</string>
    <string name="summary_preference_settings_dynamic_colors">Apply colors from wallpapers to the app theme</string>
    <string name="language">Language</string>
    <string name="summary_preference_settings_language">Changes the language used in the app</string>
    <string name="dialog_language_subtitle">Select your preferred language</string>
    <string name="dialog_info_language">Personalize your experience with your preferred language. Any language changes you make take effect right away, ensuring a seamless experience in your chosen language</string>
    <string name="cart_settings">Cart settings</string>
    <string name="summary_preference_settings_cart">Manage how your cart behaves</string>
    <string name="currency">Currency</string>
    <string name="summary_preference_settings_currency">Set your preferred currency for displaying prices</string>
    <string name="dialog_currency_subtitle">Select your preferred currency</string>
    <string name="dialog_info_currency">This currency selection will be utilized across the platform for displaying product prices, processing transactions, and providing a more personalized shopping experience</string>
    <string name="notifications">Notifications</string>
    <string name="summary_preference_settings_notifications">Manage app notifications</string>
    <string name="app_usage_notifications">App Usage Notifications</string>
    <string name="update_notifications">Update Notifications</string>
    <string name="advanced">Advanced</string>
    <string name="summary_preference_settings_advanced">Explore more advanced settings</string>
    <string name="error_reporting">Error reporting</string>
    <string name="bug_report">Bug report</string>
    <string name="summary_preference_settings_bug_report">Send bug reports and feature requests to the app\'s GitHub repository issues page</string>
    <string name="security_and_privacy">Security &amp; privacy</string>
    <string name="summary_preference_settings_privacy_and_security">Manage your privacy settings</string>
    <string name="privacy">Privacy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="summary_preference_settings_privacy_policy">View the policy that governs how we handle your data</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="summary_preference_settings_terms_of_service">Review the terms you agree to when using our service</string>
    <string name="code_of_conduct">Code of Conduct</string>
    <string name="summary_preference_settings_code_of_conduct">Understand the rules and guidelines for behavior within our service</string>
    <string name="permissions">Permissions</string>
    <string name="summary_preference_settings_permissions">Manage the permissions granted to our service</string>
    <string name="normal">Normal</string>
    <string name="ad_id">Ad id [AD_ID]</string>
    <string name="summary_preference_permissions_ad_id">Allows the app to retrieve and use the advertising identifier associated with the user\'s device, providing personalized ads, measuring ad effectiveness, and showing ads on Android 13 or later devices.</string>
    <string name="internet">Internet [INTERNET]</string>
    <string name="summary_preference_permissions_internet">Allows the app to establish an internet connection to send error reports or check for updates.</string>
    <string name="post_notifications">Post notifications [POST_NOTIFICATIONS]</string>
    <string name="summary_preference_permissions_post_notifications">Allows the app to display notifications on the devices with Android 13 or later.</string>
    <string name="runtime">Runtime</string>
    <string name="access_network_state">Access network state [ACCESS_NETWORK_STATE]</string>
    <string name="summary_preference_permissions_access_network_state">Allows the app to check network connectivity and retrieve information about Wi-Fi, including enabled status and connected Wi-Fi device names.</string>
    <string name="access_notification_policy">Access notification policy [ACCESS_NOTIFICATION_POLICY]</string>
    <string name="summary_preference_permissions_access_notification_policy">Allows the app to access and modify the device\'s notification policy, controlling how and when notifications are displayed to the user and providing custom notification management features.</string>
    <string name="billing">Billing [BILLING]</string>
    <string name="summary_preference_permissions_billing">Allows the app to use the Google Play Billing Library to handle in-app purchases and donations</string>
    <string name="check_license">Check license [CHECK_LICENSE]</string>
    <string name="summary_preference_permissions_check_license">Allows the app to verify its compliance with the license agreement and enforce licensing terms to protect intellectual property.</string>
    <string name="foreground_service">Foreground service [FOREGROUND_SERVICE]</string>
    <string name="summary_preference_permissions_foreground_service">Allows the app to create and use services that run in the foreground, giving them priority over other background processes and improving performance and reliability.</string>
    <string name="ads">Ads</string>
    <string name="summary_preference_settings_ads">Control how we use your information to show you relevant ads</string>
    <string name="display_ads">Display ads</string>
    <string name="personalized_ads">Personalized ads</string>
    <string name="summary_ads_personalized_ads">Choose how we personalize ads for you based on your interests</string>
    <string name="summary_ads">See ads that are relevant to you. Manage the information used to show personalized ads based on your app activity. You can always turn off personalization here.\n</string>
    <string name="usage_and_diagnostics">Usage and diagnostics</string>
    <string name="summary_preference_settings_usage_and_diagnostics">Share data to help improve Cart Calculator</string>
    <string name="summary_usage_and_diagnostics">Help improve your experience by automatically sending diagnostic, device, and app usage data to us. This will help improve app performance, stability, and other enhancements. Some aggregate data will also help our apps.\n\nThis is general information about your device and how you use our apps (such as battery level, system and app activity, and errors). The data will be used to improve our apps\n\nTurning off this feature doesn\'t affect your device\'s ability to send the information needed for essential services such as app updates and security.\n</string>
    <string name="legal">Legal</string>
    <string name="legal_notices">Legal notices</string>
    <string name="summary_preference_settings_legal_notices">View legal information about our service</string>
    <string name="license">License</string>
    <string name="about">About</string>
    <string name="summary_preference_settings_about">Learn more about English with Lidia</string>
    <string name="app_info">App info</string>
    <string name="app_build_version">Application build version</string>
    <string name="summary_preference_settings_oss">License details for open source software</string>
    <string name="device_info">Device Info</string>
    <string name="app_build">App Build: Release\n%1$s\n%2$s\n%3$s\n%4$s\n%5$s</string>
    <string name="manufacturer">Manufacturer:</string>
    <string name="device_model">Device Model:</string>
    <string name="android_version">Android Version:</string>
    <string name="api_level">API Level:</string>
    <string name="help_and_feedback">Help &amp; feedback</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="lessons">Lessons</string>
    <string name="home">Home</string>
    <string name="check_for_updates">Check for updates…</string>
    <string name="changelog">Changelog</string>
    <string name="more_apps">More apps…</string>
    <string name="theme">Theme</string>
</resources>