<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/privacy_policy"
        android:title="@string/privacy_policy"
        app:showAsAction="never"/>
    <item
        android:id="@+id/terms_of_service"
        android:title="@string/terms_of_service"
        app:showAsAction="never"/>
    <item
        android:id="@+id/code_of_conduct"
        android:title="@string/code_of_conduct"
        app:showAsAction="never"/>
    <item
        android:id="@+id/check_for_updates"
        android:title="@string/check_for_updates"
        app:showAsAction="never"/>
    <item
        android:id="@+id/feedback"
        android:title="@string/feedback"
        app:showAsAction="never"/>
    <item
        android:id="@+id/changelog"
        android:title="@string/changelog"
        app:showAsAction="never"/>
    <item
        android:id="@+id/more_apps"
        android:title="@string/more_apps"
        app:showAsAction="never"/>
    <item
        android:id="@+id/permissions"
        android:title="@string/permissions"
        app:showAsAction="never"/>
</menu>