<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.d4rk.englishwithlidia.plus.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home"/>
    <fragment
        android:id="@+id/nav_about"
        android:name="com.d4rk.englishwithlidia.plus.ui.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about"/>
    <fragment
        android:id="@+id/nav_lessons"
        android:name="com.d4rk.englishwithlidia.plus.ui.lessons.LessonsFragment"
        android:label="@string/lessons"
        tools:layout="@layout/fragment_lessons"/>
    <activity
        android:id="@+id/nav_settings"
        android:name="com.d4rk.englishwithlidia.plus.ui.settings.SettingsActivity"
        android:label="@string/settings"
        tools:layout="@layout/activity_settings"/>
</navigation>